--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "cors": "2.8.5",
     "dotenv": "16.0.0",
     "express": "4.17.3",
-    "mercadopago": "1.5.12"
+    "mercadopago": "1.5.12",
+    "axios": "0.26.1"
   },
   "devDependencies": {
-    "axios": "0.26.1",
     "nodemon": "2.0.13"
   }
 }
